--- a/src/App.css
+++ b/src/App.css
@@ -35,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
+};
+
+.section:after {
+  content:"";
+  position:absolute;
+  width:100%;
+  bottom:1px;
+  z-index:-1;
+  transform:scale(.9);
+  box-shadow: 0px 0px 8px 2px #ffffff;
 }
+
