--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,8 @@
-.App {
-  text-align: center;
+
+
+@media (max-width: 768px){
+   .bg-gradient{
+      background-color: #000000;
+      background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+   }
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-};
-
-.section:after {
-  content:"";
-  position:absolute;
-  width:100%;
-  bottom:1px;
-  z-index:-1;
-  transform:scale(.9);
-  box-shadow: 0px 0px 8px 2px #ffffff;
-}
-
-.roudend-t-lg{
-  border-radius: 0.5rem;
-}
-
