--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-
+.bg-gradient-md{
+   background-color: #000000;
+   background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+}
 
 @media (max-width: 768px){
    .bg-gradient{
